cambios en education

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
             <span class="animate" style="--i:6;"></span>
         </div>
 
+
         <!-- lo sig tiene sentido solo si se carga una imagen de fondo -->
         <div class="home-imgHover"></div>
         <span class="animate home-img" style="--i:7;"></span>
@@ -134,6 +135,14 @@
                             <div class="year"><i class='bx bxs-calendar'></i> 03/2023 - 07/2023</div>
                             <h3>Spring</h3>
                             <p>Course taken in "Agencia de aprendizaje a lo largo de la vida" as part of the program "Codo a Codo".</p>
+                        </div>
+                    </div>
+
+                    <div class="education-content">   
+                        <div class="content">
+                            <div class="year"><i class='bx bxs-calendar'></i> 04/2023 - 10/2023</div>
+                            <h3>BackEnd Developer</h3>
+                            <p>The course has been started but not yet completed in "Alura Latam" as part of the program "Oracle Next Education".</p>
                         </div>
                     </div>
                 
@@ -282,7 +291,7 @@
                 </div>
             </div>
 
-            <div class="portfolio-box"><span class="animate scroll" style="--i:2;"></span>
+            <div class="portfolio-box"><span class="animate scroll" style="--i:5;"></span>
                 <img src="imagenes/portfolio4.jpg" alt="">
                 <div class="portfolio-layer">
                     <h4>WebApp</h4>
@@ -291,7 +300,7 @@
                 </div>
             </div>
 
-            <div class="portfolio-box"><span class="animate scroll" style="--i:3;"></span>
+            <div class="portfolio-box"><span class="animate scroll" style="--i:6;"></span>
                 <img src="imagenes/portfolio5.jpg" alt="">
                 <div class="portfolio-layer">
                     <h4>Web Design</h4>
@@ -300,7 +309,7 @@
                 </div>
             </div>
 
-            <div class="portfolio-box"><span class="animate scroll" style="--i:4;"></span>
+            <div class="portfolio-box"><span class="animate scroll" style="--i:7;"></span>
                 <img src="imagenes/portfolio6.jpg" alt="">
                 <div class="portfolio-layer">
                     <h4>Conversor de moneda</h4>
