agregando link del conversor

--- a/index.html
+++ b/index.html
@@ -267,8 +267,8 @@
             <div class="portfolio-box"><span class="animate scroll" style="--i:2;"></span>
                 <img src="imagenes/portfolio1.jpg" alt="">
                 <div class="portfolio-layer">
-                    <h4>Projecto Encriptador</h4>
-                    <p>Programa Encriptador utilizando Html, Css y JavaScript</p>
+                    <h4>Encriptador</h4>
+                    <p>Encriptador de texto utilizando Html, Css y JavaScript</p>
                     <a href="https://rodritz.github.io/ChallengeOne-Encriptador5/" target="_blank"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
@@ -276,7 +276,7 @@
             <div class="portfolio-box"><span class="animate scroll" style="--i:3;"></span>
                 <img src="imagenes/portfolio2.jpg" alt="">
                 <div class="portfolio-layer">
-                    <h4>Projecto FlySky</h4>
+                    <h4>Proyecto FlySky</h4>
                     <p>Api Rest donde implementamos un Sistema de venta de vuelos utilizando Java y Spring</p>
                     <a href="https://github.com/Rodritz/TrabajoPractico-Spring2023-com23312" target="_blank"><i class='bx bx-link-external'></i></a>
                 </div>
@@ -286,7 +286,7 @@
                 <img src="imagenes/portfolio3.jpg" alt="">
                 <div class="portfolio-layer">
                     <h4>Pronosticos Deportivos</h4>
-                    <p>Programa de Pronósticos Deportivos utilizando Java</p>
+                    <p>Programa de pronósticos utilizando Java</p>
                     <a href="https://github.com/Rodritz/TP-Integrador-V2" target="_blank"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
@@ -295,7 +295,7 @@
                 <img src="imagenes/portfolio4.jpg" alt="">
                 <div class="portfolio-layer">
                     <h4>WebApp</h4>
-                    <p>Creamos un CRUD con conexion a MySql</p>
+                    <p>Creación de un CRUD con conexion a MySql</p>
                     <a href="https://github.com/Rodritz/22549-BackEnd" target="_blank"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
@@ -312,9 +312,9 @@
             <div class="portfolio-box"><span class="animate scroll" style="--i:7;"></span>
                 <img src="imagenes/portfolio6.jpg" alt="">
                 <div class="portfolio-layer">
-                    <h4>Conversor de moneda</h4>
-                    <p>proyecto en proceso......</p>
-                    <a href=""><i class='bx bx-link-external'></i></a>
+                    <h4>Conversor de Divisas y Temperatura</h4>
+                    <p>Proyecto Java utilizando la biblioteca Swing</p>
+                    <a href="https://github.com/Rodritz/Conversor.git" target="_blank"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
         </div>
