cambios en el idioma de los proyectos

--- a/index.html
+++ b/index.html
@@ -267,8 +267,8 @@
             <div class="portfolio-box"><span class="animate scroll" style="--i:2;"></span>
                 <img src="imagenes/portfolio1.jpg" alt="">
                 <div class="portfolio-layer">
-                    <h4>Encriptador</h4>
-                    <p>Encriptador de texto utilizando Html, Css y JavaScript</p>
+                    <h4>Text Encryptor</h4>
+                    <p>Text Encryptor using HTML, CSS, and JavaScript</p>
                     <a href="https://rodritz.github.io/ChallengeOne-Encriptador5/" target="_blank"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
@@ -276,8 +276,8 @@
             <div class="portfolio-box"><span class="animate scroll" style="--i:3;"></span>
                 <img src="imagenes/portfolio2.jpg" alt="">
                 <div class="portfolio-layer">
-                    <h4>Proyecto FlySky</h4>
-                    <p>Api Rest donde implementamos un Sistema de venta de vuelos utilizando Java y Spring</p>
+                    <h4>FlySky Project</h4>
+                    <p>Java and Spring-based REST API for Flight Sales</p>
                     <a href="https://github.com/Rodritz/TrabajoPractico-Spring2023-com23312" target="_blank"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
@@ -285,8 +285,8 @@
             <div class="portfolio-box"><span class="animate scroll" style="--i:4;"></span>
                 <img src="imagenes/portfolio3.jpg" alt="">
                 <div class="portfolio-layer">
-                    <h4>Pronosticos Deportivos</h4>
-                    <p>Programa de pronósticos utilizando Java</p>
+                    <h4>Sports Predictions</h4>
+                    <p>Predictions Program using Java</p>
                     <a href="https://github.com/Rodritz/TP-Integrador-V2" target="_blank"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
@@ -295,7 +295,7 @@
                 <img src="imagenes/portfolio4.jpg" alt="">
                 <div class="portfolio-layer">
                     <h4>WebApp</h4>
-                    <p>Creación de un CRUD con conexion a MySql</p>
+                    <p>CRUD Creation with MySQL Connection</p>
                     <a href="https://github.com/Rodritz/22549-BackEnd" target="_blank"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
@@ -304,7 +304,7 @@
                 <img src="imagenes/portfolio5.jpg" alt="">
                 <div class="portfolio-layer">
                     <h4>Web Design</h4>
-                    <p>Proyecto Front End utilizando Html, Css y JavaScript</p>
+                    <p>Front End Project using HTML, CSS, and JavaScript</p>
                     <a href="https://rodritz.github.io/Proyecto-FrontEnd/" target="_blank"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
@@ -312,8 +312,8 @@
             <div class="portfolio-box"><span class="animate scroll" style="--i:7;"></span>
                 <img src="imagenes/portfolio6.jpg" alt="">
                 <div class="portfolio-layer">
-                    <h4>Conversor de Divisas y Temperatura</h4>
-                    <p>Proyecto Java utilizando la biblioteca Swing</p>
+                    <h4>Currency and Temperature Converter</h4>
+                    <p>Java Project using the Swing library</p>
                     <a href="https://github.com/Rodritz/Conversor.git" target="_blank"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
