--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </p>
 
             <div class="btn-box">
-                <a href="Complementos/Curriculum-Rodrigo-Urquia-2023.pdf" download="MiCV.pdf" class="btn">Download CV</a>
+                <a href="Complementos/rodrigo-urquía_cv.pdf" download="Rodrigo_Urquía_CV.pdf" class="btn">Download CV</a>
                 <!-- <a href="#" class="btn">Let's Talk</a> -->
                 <span class="animate" style="--i:5;"></span>
             </div>
