--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                         <div class="content">
                             <div class="year"><i class='bx bxs-calendar'></i> 08/2023 - 12/2023</div>
                             <h3>React</h3>
-                            <p>The course has been started but not yet completed in "Agencia de aprendizaje a lo largo de la vida" as part of de program "Codo a Codo".</p>
+                            <p>Course taken in "Agencia de aprendizaje a lo largo de la vida" as part of the program "Codo a Codo".</p>
                         </div>
                     </div>  
 
@@ -158,7 +158,7 @@
                         <div class="content">
                             <div class="year"><i class='bx bxs-calendar'></i> 10/2023 - 12/2023</div>
                             <h3>Intermediate Java Developer</h3>
-                            <p>The course has been started but not yet completed in "Universidad Tecnologica Nacional" as part of the program "Argentina Programa 4.0".</p>
+                            <p>Course taken in "Universidad Tecnologica Nacional" as part of the program "Argentina Programa 4.0".</p>
                         </div>
                     </div>
                     
